test-expected/large/notifications/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: notification
    foo.com/duversion: 1.7.13-20190909.1568066006938
    foo.com/version: 1.7.13
  labels:
    app.kubernetes.io/name: notifications
    helm.sh/chart: notifications-1.7.13
  name: notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: notifications
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: notifications
        app.kubernetes.io/name: notifications
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/va-125.0.0-x64_redhat_linux_7-docker-prod/foo-notifications:1.7.13-20190909.1568066006938
        imagePullPolicy: IfNotPresent
        name: notifications
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
